--- a/login-register-frontend/src/app/app.component.html
+++ b/login-register-frontend/src/app/app.component.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
       margin: 0;
@@ -11,12 +10,11 @@
 
     .topnav {
       overflow: hidden;
-      background-color: #2adcc4;
+      background-color: #003cf3;
     }
 
     .topnav a {
       float: left;
-      display: block;
       color: #f2f2f2;
       text-align: center;
       padding: 14px 16px;
@@ -25,41 +23,20 @@
     }
 
     .topnav a:hover {
-      background-color: #0c5bfa;
+      background-color: #ddd;
       color: black;
     }
 
-    .topnav .icon {
-      display: none;
+    .topnav a.active {
+      background-color: #04AA6D;
+      color: white;
     }
 
-    @media screen and (max-width: 600px) {
-      .topnav a:not(:first-child) {
-        display: none;
-      }
-
-      .topnav a.icon {
-        float: right;
-        display: block;
-      }
-    }
-
-    @media screen and (max-width: 600px) {
-
-      .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
-
-      .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-      }
+    .topnav-right {
+      float: right;
     }
   </style>
-  <title></title>
+  <title>Home</title>
 </head>
 <body>
 
@@ -70,8 +47,9 @@
     <a routerLink="create-book" routerLinkActive="active" class="nav-link">Add Book</a>
     <a routerLink="authors" routerLinkActive="active" class="nav-link">Author list</a>
     <a routerLink="create-author" routerLinkActive="active" class="nav-link">Create Author</a>
-
-
+    <div class="topnav-right">
+    <a  routerLink="#loggedOut" class="nav-item" (click)="logout()" routerLinkActive="active" style="text-align: right">Logout</a>
+    </div>
   </div>
 
   <div *ngIf="!authority" class="nav-item">
